fix(style): pagination-wrap add z-index.

--- a/src/style/sidebar.less
+++ b/src/style/sidebar.less
@@ -421,6 +421,7 @@
   padding-bottom: 55px;
 
   .atk-pagination-wrap {
+    z-index: 200;
     position: fixed;
     width: 100%;
     bottom: 0;
